# csgo-tool

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp  main.hpp
source/config/: config.cpp  config.hpp  confvar.cpp  confvar.hpp
source/features/: feature.cpp  feature.hpp  featuregroup.cpp  featuregroup.hpp
